--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,12 +79,12 @@ body {
 } */
 
 .blog_link {
-  @apply rounded-3xl bg-indigo-100 px-4 py-2 text-sm leading-loose text-indigo-600 duration-300 hover:bg-indigo-600 hover:text-white dark:bg-indigo-800 dark:text-indigo-200;
+  @apply rounded-3xl bg-indigo-600 px-4 py-2 text-xs leading-loose text-indigo-100 duration-300 hover:bg-indigo-500 hover:text-white dark:bg-indigo-800 dark:text-indigo-200;
 }
 
 @media (max-width: 420px) {
   .blog_paragraph {
-    @apply text-base leading-loose;
+    @apply text-base leading-relaxed;
   }
 
   .blog_container {
