--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -71,7 +71,11 @@ body {
 }
 
 .blog_paragraph {
-  @apply text-wrap break-words text-justify font-giest-sans text-lg leading-relaxed text-gray-900 dark:text-gray-300;
+  @apply text-wrap break-words text-justify font-giest-sans text-base leading-relaxed text-gray-900 dark:text-gray-300;
+}
+
+.blog-small .blog_paragraph {
+  @apply text-base;
 }
 
 .blog_image {
@@ -90,42 +94,28 @@ body {
   @apply w-full min-w-[300px] bg-gray-100 dark:bg-gray-800;
 }
 
-@media (max-width: 420px) {
-  .blog_paragraph {
-    @apply text-base leading-relaxed;
-  }
-
-  .blog_container {
-    @apply px-0;
-  }
-}
-
-.font-xl {
-  @apply text-xl;
-}
-
 .blog_heading_h1 {
-  @apply text-4xl font-semibold text-gray-900 dark:text-gray-300;
+  @apply font-giest-sans text-4xl font-semibold text-gray-900 dark:text-gray-300;
 }
 
 .blog_heading_h2 {
-  @apply text-3xl font-semibold text-gray-900 dark:text-gray-300;
+  @apply font-giest-sans text-3xl font-semibold text-gray-900 dark:text-gray-300;
 }
 
 .blog_heading_h3 {
-  @apply text-2xl font-semibold text-gray-900 dark:text-gray-300;
+  @apply font-giest-sans text-2xl font-semibold text-gray-900 dark:text-gray-300;
 }
 
 .blog_heading_h4 {
-  @apply text-xl font-semibold text-gray-900 dark:text-gray-300;
+  @apply font-giest-sans text-xl font-semibold text-gray-900 dark:text-gray-300;
 }
 
 .blog_heading_h5 {
-  @apply text-lg font-semibold text-gray-900 dark:text-gray-300;
+  @apply font-giest-sans text-lg font-semibold text-gray-900 dark:text-gray-300;
 }
 
 .blog_heading_h6 {
-  @apply text-base font-semibold text-gray-900 dark:text-gray-300;
+  @apply font-giest-sans text-base font-semibold text-gray-900 dark:text-gray-300;
 }
 .blog_paragraph a:hover {
   @apply underline;
@@ -149,6 +139,20 @@ body {
 
 .blog_paragraph pre code {
   @apply block rounded-lg bg-gray-100 p-4 dark:bg-gray-800;
+}
+
+.font-xl {
+  @apply text-xl;
+}
+
+@media (max-width: 420px) {
+  .blog_paragraph {
+    @apply text-base leading-relaxed;
+  }
+
+  .blog_container {
+    @apply px-0;
+  }
 }
 
 @layer base {
