--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,13 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300..900&display=swap"); */
+
+@import url("https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: "Work Sans", sans-serif;
+  font-family: "Google Sans", sans-serif;
 }
 
 .bg-zinc-transparent {
